# Sentiment_Analysis

./: README.md  main.py  pyproject.toml
cognitusai_case_study/: README.md  main.py  pyproject.toml
cognitusai_case_study/project/: __init__.py  constants.py  log_config.py  sentiment_analyzer.py
project/: client.py  utils.py
